--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Landing Discord</title>
 </head>
 <body>
-    
+
+    <!-- intestazione con logo e login -->
+    <header>
+        <div class="contenitore-header">
+            <div class="logo">logo</div>
+            <div class="link">link link link link</div>
+            <div class="login">login</div>
+        </div>
+    </header>
+
+    <!-- corpo pagina -->
+    <main></main>
+
+    <footer></footer>
+
 </body>
 </html>
