aggiunta sotto intestazione

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
     </header>
 
     <!-- corpo pagina -->
-    <main></main>
+    <main>
+
+        <!-- sotto intestazione -->
+        <div class="sotto-intestazione">
+            <div class="conainer-sotto-intestazione">
+
+            </div>
+        </div>
+
+
+    </main>
 
     <footer></footer>
 
