aggiunta delle sezioni del corpo principale

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- intestazione con logo e login -->
     <header>
         <div class="contenitore-header">
-            <div class="logo">logo</div>
-            <div class="link">link link link link</div>
-            <div class="login">login</div>
+                <div class="logo">logo</div>
+                <div class="link">link link link link</div>
+                <div class="login">login</div>
         </div>
     </header>
 
@@ -22,9 +22,34 @@
 
         <!-- sotto intestazione -->
         <div class="sotto-intestazione">
-            <div class="conainer-sotto-intestazione">
+            <div class="conainer-sotto-intestazione"></div>
+        </div>
 
+        <!-- corpo principale -->
+        <div class="sezione-un-luogo">
+            <div class="container-block1">
+                <div class="container-img1"></div>
+                <div class="container-text1"></div>
             </div>
+        </div>
+
+        <div class="sezione-dove-trovarsi">
+            <div class="container-block2">
+                <div class="container-img2"></div>
+                <div class="container-text2"></div>
+            </div>
+        </div>
+
+        <div class="sezione-da-pochi">
+            <div class="container-block3">
+                <div class="container-img3"></div>
+                <div class="container-text3"></div>
+            </div>
+        </div>
+
+        <!-- parte finale del corpo principale -->
+        <div class="finale-blocco-principale">
+            <div class="conainer-finale-blocco-principale"></div>
         </div>
 
 
