--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     <!-- intestazione con logo e login -->
     <header>
-        <div class="contenitore-header">
-                <div class="logo">logo</div>
-                <div class="link">link link link link</div>
-                <div class="login">login</div>
+        <div class="sezione-header">
+            <div class="contenitore-header">
+                    <div class="logo">logo</div>
+                    <div class="link">link link link link</div>
+                    <div class="login">login</div>
+            </div>
         </div>
     </header>
 
@@ -35,8 +37,8 @@
 
         <div class="sezione-dove-trovarsi">
             <div class="container-block2">
-                <div class="container-img2"></div>
                 <div class="container-text2"></div>
+                <div class="container-img2"></div>
             </div>
         </div>
 
