correzioni semantiche e raggruppato in css i blocchi di img e text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="sezione-header">
             <div class="contenitore-header">
                     <div class="logo">logo</div>
-                    <div class="link">link link link link</div>
+                    <div class="link">link link link link link</div>
                     <div class="login">login</div>
             </div>
         </div>
@@ -29,31 +29,29 @@
 
         <!-- corpo principale -->
         <div class="sezione-un-luogo">
-            <div class="container-block1">
-                <div class="container-img1"></div>
-                <div class="container-text1"></div>
+            <div class="container-un-luogo">
+                <div class="container-img"></div>
+                <div class="container-text"></div>
             </div>
         </div>
 
         <div class="sezione-dove-trovarsi">
-            <div class="container-block2">
-                <div class="container-text2"></div>
-                <div class="container-img2"></div>
+            <div class="container-dove-trovarsi">
+                <div class="container-text"></div>
+                <div class="container-img"></div>
             </div>
         </div>
 
         <div class="sezione-da-pochi">
-            <div class="container-block3">
-                <div class="container-img3"></div>
-                <div class="container-text3"></div>
+            <div class="container-da-pochi">
+                <div class="container-img"></div>
+                <div class="container-text"></div>
             </div>
         </div>
 
-        <!-- parte finale del corpo principale -->
-        <div class="finale-blocco-principale">
-            <div class="conainer-finale-blocco-principale"></div>
+        <div class="sezione-tecnologia-affidabile">
+            <div class="container-tecnologia-affidabile"></div>
         </div>
-
 
     </main>
 
