finalizzazione sezione prima del footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- intestazione con logo e login -->
     <header>
+
         <div class="sezione-header">
             <div class="contenitore-header">
                     <div class="logo">logo</div>
@@ -17,6 +18,7 @@
                     <div class="login">login</div>
             </div>
         </div>
+        
     </header>
 
     <!-- corpo pagina -->
@@ -51,6 +53,17 @@
 
         <div class="sezione-tecnologia-affidabile">
             <div class="container-tecnologia-affidabile"></div>
+        </div>
+
+        <!-- sezione informazioni -->
+        <div class="sezione-informazioni">
+            <div class="container-informazioni">
+                <div class="container-principale"></div>
+                <div class="container-informazioni-varie"></div>
+                <div class="container-informazioni-varie"></div>
+                <div class="container-informazioni-varie"></div>
+                <div class="container-informazioni-varie"></div>
+            </div>
         </div>
 
     </main>
