--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="login">login</div>
             </div>
         </div>
-        
+
     </header>
 
     <!-- corpo pagina -->
@@ -67,8 +67,15 @@
         </div>
 
     </main>
-
-    <footer></footer>
+    <hr>
+    <footer>
+        <div class="sezione-footer">
+            <div class="contenitore-footer">
+                    <div class="logo-footer">Logo</div>
+                    <div class="bottone">Bottone</div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
